setting index style

--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index GitHub Pages</title>
-</head>
-<body>
-    <a href="/portfolio/">Portafolio</a>
-    <a href="/testFront/">Test de pages</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Navigation Page</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="header-action">
+        <div class="left-action-header">
+          <div class="action-header-menu"></div>
+          <div class="action-header-menu"></div>
+          <div class="action-header-menu"></div>
+        </div>
+        <div class="center-action-header">
+            Surialpha Navigation Page
+        </div>
+        <div class="rigth-action-header">
+        </div>
+      </div>
+      <div class="content">
+          <p><span id="user-command" >[visitor@site ~] $</span> dist/navigation ls -l</p>
+          <p>total 2</p>
+          <p>-rwxr--r-- 2 root user    500 Nov 18 17:23 app <a href="/portfolio/">./portafolio</a></p>
+          <p>-rwxr--r-- 1 root user    21  Oct 4  12:14 app <a href="/testFront/">./testFront</a></p>
+          <p><span id="user-command" >[visitor@site ~] $</span> public/social-media ls -l</p>
+          <p>total 3</p>
+          <p>-rwxrw-rw- 1 root user    0 jan 19  09:45 page <a target="_blank" href="https://www.linkedin.com/in/surialpha/">LinkedIn</a></p>
+          <p>-rwxrw-rw- 1 root user    0 jan 19  09:45 page <a target="_blank" href="https://github.com/Surialpha">GitHub</a></p>
+          <p>-rwxrw-rw- 1 root user    0 jan 19  09:45 mail <a target="_blank" href="mailto: sgp1196@gmail.com">Gmail</a></p>
+          <p><span id="user-command" >[visitor@site ~] $</span> <span id="blank-space"></span> </p>
+      </div>
+    </div>
+  </body>
 </html>
