changing page to repo in github line

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <p><span id="user-command" >[visitor@site ~] $</span> public/social-media ls -l</p>
           <p>total 3</p>
           <p>-rwxrw-rw- 1 root user    0 jan 19  09:45 page <a target="_blank" href="https://www.linkedin.com/in/surialpha/">LinkedIn</a></p>
-          <p>-rwxrw-rw- 1 root user    0 jan 19  09:45 page <a target="_blank" href="https://github.com/Surialpha">GitHub</a></p>
+          <p>-rwxrw-rw- 1 root user    0 jan 19  09:45 repo <a target="_blank" href="https://github.com/Surialpha">GitHub</a></p>
           <p>-rwxrw-rw- 1 root user    0 jan 19  09:45 mail <a target="_blank" href="mailto: sgp1196@gmail.com">Gmail</a></p>
           <p><span id="user-command" >[visitor@site ~] $</span> <span id="blank-space"></span> </p>
       </div>
