replace of content and adding favicon and background style

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navigation Page</title>
+    <title>Alpha</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="./vendor/img/meerkat.png" type="image/x-icon">
   </head>
   <body>
     <div class="wrapper">
@@ -25,12 +26,12 @@
           <p><span id="user-command" >[visitor@site ~] $</span> dist/navigation ls -l</p>
           <p>total 2</p>
           <p>-rwxr--r-- 2 root user    500 Nov 18 17:23 app <a href="/portfolio/">./portafolio</a></p>
-          <p>-rwxr--r-- 1 root user    21  Oct 4  12:14 app <a href="/testFront/">./testFront</a></p>
+          <p>-rwxr--r-- 1 root user    21  Oct 04  12:14 app <a href="/testFront/">./testFront</a></p>
           <p><span id="user-command" >[visitor@site ~] $</span> public/social-media ls -l</p>
           <p>total 3</p>
-          <p>-rwxrw-rw- 1 root user    0 jan 19  09:45 page <a target="_blank" href="https://www.linkedin.com/in/surialpha/">LinkedIn</a></p>
-          <p>-rwxrw-rw- 1 root user    0 jan 19  09:45 repo <a target="_blank" href="https://github.com/Surialpha">GitHub</a></p>
-          <p>-rwxrw-rw- 1 root user    0 jan 19  09:45 mail <a target="_blank" href="mailto: sgp1196@gmail.com">Gmail</a></p>
+          <p>-rwxrw-rw- 1 root user    0 Jan 19  09:45 page <a target="_blank" href="https://www.linkedin.com/in/surialpha/">LinkedIn</a></p>
+          <p>-rwxrw-rw- 1 root user    0 Aug 11  22:31 repo <a target="_blank" href="https://github.com/Surialpha">GitHub</a></p>
+          <p>-rwxrw-rw- 1 root user    0 Jul 06  14:00 mail <a target="_blank" href="mailto: sgp1196@gmail.com">Gmail</a></p>
           <p><span id="user-command" >[visitor@site ~] $</span> <span id="blank-space"></span> </p>
       </div>
     </div>
