--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alpha</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/vendor/css/style.css" />
     <link rel="shortcut icon" href="./vendor/img/meerkat.png" type="image/x-icon">
   </head>
   <body>
+   <div class="content-wrapper">
     <div class="wrapper">
       <div class="header-action">
         <div class="left-action-header">
@@ -25,15 +26,16 @@
       <div class="content">
           <p><span id="user-command" >[visitor@site ~] $</span> dist/navigation ls -l</p>
           <p>total 2</p>
-          <p>-rwxr--r-- 2 root user    500 Nov 18 17:23 app <a href="/portfolio/">./portafolio</a></p>
-          <p>-rwxr--r-- 1 root user    21  Oct 04  12:14 app <a href="/testFront/">./testFront</a></p>
+          <p>drwxr--r-- 2 root user    500 Nov 18 17:23 app <a href="/portfolio/">./portafolio</a></p>
+          <p>drwxr--r-- 1 root user    21  Oct 04  12:14 app <a href="/testFront/">./testFront</a></p>
           <p><span id="user-command" >[visitor@site ~] $</span> public/social-media ls -l</p>
           <p>total 3</p>
           <p>-rwxrw-rw- 1 root user    0 Jan 19  09:45 page <a target="_blank" href="https://www.linkedin.com/in/surialpha/">LinkedIn</a></p>
-          <p>-rwxrw-rw- 1 root user    0 Aug 11  22:31 repo <a target="_blank" href="https://github.com/Surialpha">GitHub</a></p>
+          <p>drwxrw-rw- 1 root user    0 Aug 11  22:31 repo <a target="_blank" href="https://github.com/Surialpha">GitHub</a></p>
           <p>-rwxrw-rw- 1 root user    0 Jul 06  14:00 mail <a target="_blank" href="mailto: sgp1196@gmail.com">Gmail</a></p>
           <p><span id="user-command" >[visitor@site ~] $</span> <span id="blank-space"></span> </p>
       </div>
     </div>
+   </div>
   </body>
 </html>
