--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <link rel="shortcut icon" href="./vendor/img/meerkat.png" type="image/x-icon">
   </head>
   <body>
+    <div class="nav-bar" style="display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem;
+    font-size: .8rem;">
+      <div ></div>
+      <p id='clock' style="color: white; text-align: center;">17:16 PM</p>
+    </div>
+
    <div class="content-wrapper">
     <div class="wrapper">
       <div class="header-action">
@@ -38,4 +47,5 @@
     </div>
    </div>
   </body>
+<script src="/vendor/js/functions.js"></script>
 </html>
