--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alpha</title>
     <link rel="stylesheet" href="/vendor/css/style.css" />
-    <link rel="shortcut icon" href="./vendor/img/meerkat.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/vendor/img/meerkat-nbg.png" type="image/x-icon">
   </head>
   <body>
     <div class="nav-bar" style="display: flex;
